1b-ingress/data-api.yaml
#
# Deploy the back end data API microservice in Kubernetes
#
# !IMPORTANT! Change the image reference to point to the registry holding
# the Smilr images, either ACR or public

kind: Deployment
apiVersion: apps/v1
metadata:
  name: data-api
  labels:
    app: data-api
    scenario: 1b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
        scenario: 1b
    spec:
      containers:
      - name: data-api-pods

        # !CHANGE THIS! To your real image reference for the data-api  
        image: smilr/data-api:stable
        imagePullPolicy: Always

        ports:
        - containerPort: 4000

        livenessProbe:
          httpGet:
            path: /api/info
            port: 4000
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          limits:
            memory: "2G"
            cpu: "0.25"
          requests:
            memory: "2G"
            cpu: "0.25"
        
      nodeSelector:
        agentpool: nodepool1
            
      # Wipe & initialize the database with demo data, remove if unwanted
      # initContainers:
      #  - name: init-demodata
      #    image: smilr/data-api
      #    command: ['sh', '-c', 'cd demoData && node demoData.js']
      #    env:
      #      - name: MONGO_CONNSTR
      #        value: mongodb://mongodb-svc.default
      #      - name: WIPE_DB
      #        value: "1"

---

#
# Deploy the back end data API microservice in Kubernetes
#

kind: Service
apiVersion: v1
metadata:
  name: data-api-svc
  labels:
    app: data-api
    scenario: 1b
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  selector:
    app: data-api
