1b-ingress/ingress-https.yaml
#
# This is the HTTPS version of the Smilr ingress
# Use if you've set up cert-manager and have a valid cert issued
#
# !IMPORTANT! Change the domain names in the host/hosts sections to match your real 
# DNS zone, as created when you deployed AKS with the HTTP application routing add-on

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smilr-ingress
  labels:
    scenario: 1b
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    # Change FQDN host as required to match your config
    - smilr.56539f01234e4e00981e.westeurope.aksapp.io
    secretName: smilr-cert-staging
  rules:
  # Change FQDN host as required to match your config
  - host: smilr.56539f01234e4e00981e.westeurope.aksapp.io
    http:
      paths:
      - path: /api
        backend:
          serviceName: data-api-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend-svc
          servicePort: 80
